- removed the friends box if the player is not registered - fixed the size of the accept buttons too big on high height screens

--- a/djang/static/website/styles/friends.css
+++ b/djang/static/website/styles/friends.css
@@ -2,7 +2,7 @@
     background-color: #292b37;
     border: 3px solid #4c4f67;
     border-radius: 1rem;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: flex-start;
     box-shadow: 0 0 20px rgba(0, 255, 255, 0.301);
