--- a/djang/static/website/styles/mainMenu.css
+++ b/djang/static/website/styles/mainMenu.css
@@ -119,6 +119,7 @@
     align-items: center;
     width: 17vw;
     height: 8vh;
+    max-height: 64px;
     margin: 0.5vh 0;
     color: white;
     font-size: clamp(0.5rem + 1vw, 0.5rem + 1vw + 1vh, 6vw);
